<resources>
    <string name="app_name">Speex</string>
    <!--Homepage Function Module Array-->
    <string-array name="home_function_names">
        <item>monitor</item>
        <item>Vehicle list</item>
        <item>Speeding alarm</item>
        <item>food</item>
        <item>Accessories</item>
        <item>data report</item>
    </string-array>

    <!--界面 title -->
    <string name="tv_title_home">Bafang Intelligent Control</string>
    <string name="tv_title_food">food</string>
    <string name="tv_title_monitor">monitor</string>
    <string name="tv_title_speed">Speeding alarm</string>
    <string name="tv_title_parts">Accessories</string>
    <string name="tv_title_data_forms">data report</string>
    <string name="tv_title_car_list">Vehicle list</string>

    <!--group name-->
    <string name="tv_user">group name</string>
    <string name="tv_login">log in</string>
    <string name="tv_user_login">group name log in</string>
    <string name="tv_user_password">password</string>
    <string name="tv_remember_password">remember password</string>

    <!--Button-->
    <string name="btn_save"> Save </string>

    <!--log in Related -->
    <string name="user_login">group name Related </string>
    <string name="group_name">group name</string>
    <string name="user_name">username(Up to 7 people)</string>
    <string name="user_name_error">username error </string>
    <string name="user_password">password</string>
    <string name="user_password_error">password error </string>
    <string name="user_remember_pwd">remember password</string>
    <string name="user_code">Verification code</string>
    <string name="user_get_num_code">9393</string>
    <string name="curr_ip">The current IP address is：</string>
    <string name="stop_searching">Stop searching</string>
    <string name="start_search">Start search</string>
    <string name="online">online</string>
    <string name="offline">Offline</string>
</resources>