<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_login"
            android:textSize="@dimen/activity_text_size27"
            android:textColor="@color/border_bg_white"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_input"
            android:layout_marginTop="@dimen/activity_margin30"
            android:layout_marginLeft="@dimen/activity_margin80"
            android:layout_marginRight="@dimen/activity_margin80"
            android:padding="@dimen/activity_margin8"
            android:id="@+id/group_name_et"
            android:hint="@string/group_name"
            android:textColorHint="@color/text_code_bg"
            android:textSize="@dimen/activity_text_size14"
            android:visibility="gone"
            android:textColor="@color/text_title_black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_input"
            android:layout_marginTop="@dimen/activity_margin30"
            android:layout_marginLeft="@dimen/activity_margin80"
            android:layout_marginRight="@dimen/activity_margin80"
            android:padding="@dimen/activity_margin8"
            android:id="@+id/group_name_tv"
            android:hint="@string/group_name"
            android:textColorHint="@color/text_code_bg"
            android:textSize="@dimen/activity_text_size14"
            android:textColor="@color/text_title_black"/>
        <!--Used when showing and hiding invisible And visible cannot use gone-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/activity_margin4"
            android:layout_marginBottom="@dimen/activity_margin4"
            android:layout_marginRight="@dimen/activity_margin80"
            android:text="@string/user_name_error"
            android:textSize="@dimen/activity_margin12"
            android:textColor="@color/text_title_red"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/user_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius_input"
            android:layout_marginLeft="@dimen/activity_margin80"
            android:layout_marginRight="@dimen/activity_margin80"
            android:padding="@dimen/activity_margin8"
            android:hint="@string/user_name"
            android:maxLines="1"
            android:maxLength="7"
            android:textColorHint="@color/text_code_bg"
            android:textSize="@dimen/activity_text_size14"
            android:textColor="@color/text_title_black"/>
        <!--Used when showing and hiding invisible And visible cannot use gone-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/activity_margin4"
            android:layout_marginRight="@dimen/activity_margin80"
            android:text="@string/user_password_error"
            android:textSize="@dimen/activity_margin12"
            android:textColor="@color/text_title_red"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin80"
            android:drawableLeft="@drawable/sousuo_huangse"
            android:drawablePadding="@dimen/activity_margin4"
            android:text="@string/user_remember_pwd"
            android:textSize="@dimen/activity_margin13"
            android:visibility="gone"
            android:textColor="@color/border_bg_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin10"
            android:layout_marginLeft="@dimen/activity_margin80"
            android:layout_marginRight="@dimen/activity_margin80"
            android:visibility="gone"
            android:orientation="horizontal">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_radius_input"
                android:gravity="center_vertical"
                android:padding="@dimen/activity_margin5"
                android:hint="@string/user_code"
                android:textColorHint="@color/text_title_black"
                android:textSize="@dimen/activity_text_size11"
                android:textColor="@color/text_title_black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_radius_gray"
                android:layout_marginLeft="@dimen/activity_margin60"
                android:paddingTop="@dimen/activity_margin5"
                android:paddingBottom="@dimen/activity_margin5"
                android:gravity="center"
                android:text="@string/user_get_num_code"
                android:textSize="@dimen/activity_text_size15"
                android:textColor="@color/text_title_black"/>
        </LinearLayout>

        <include
            layout="@layout/common_btn_small"/>
    </LinearLayout>
</FrameLayout>