<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ip_ll">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_ip"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/activity_audio_current_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="255.255.255.255"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_ll"
        android:layout_below="@+id/ip_ll"
        >
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_search"
            />
        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_searching"
            />
        <Button
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online"
            />
        <Button
            android:id="@+id/offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/record_ll"
        android:layout_below="@+id/search_ll">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_record_btn"
            android:text="Single-shot recording"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop_record_btn"
            android:text="Stop recording"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_video_btn"
            android:text="Group recording"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop_video_btn"
            android:text="Stop playing recording"/>
    </LinearLayout>
    <TextView
        android:id="@+id/activity_audio_local_network_user_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Intercom for current LAN group name："
        android:layout_below="@+id/record_ll"
        android:textSize="15sp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_audio_local_network_user_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_audio_local_network_user_tv"
        android:layout_marginTop="10dp"
        app:layoutManager="LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
